--- a/ProjectUbuild/ProjectUbuild.csproj
+++ b/ProjectUbuild/ProjectUbuild.csproj
@@ -1786,6 +1786,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="Views\Loan\Apply.cshtml" />
     <Content Include="Views\tes.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
