--- a/uBuildCore/uBuildCore.csproj
+++ b/uBuildCore/uBuildCore.csproj
@@ -70,6 +70,10 @@
     <Compile Include="Logger.cs" />
     <Compile Include="Models\ClientAuths.cs" />
     <Compile Include="Models\ClientInfos.cs" />
+    <Compile Include="Models\FittingsFixtures.cs" />
+    <Compile Include="Models\HouseImage.cs" />
+    <Compile Include="Models\LoanAppls.cs" />
+    <Compile Include="Models\LoanProcStages.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RestHandler.cs" />
   </ItemGroup>
