--- a/ProjectUbuild/ProjectUbuild.csproj
+++ b/ProjectUbuild/ProjectUbuild.csproj
@@ -1780,41 +1780,15 @@
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\app\account-activity.controller.js" />
-    <Content Include="Scripts\app\account-statement.controller.js" />
     <Content Include="Scripts\app\account-summary.controller.js" />
     <Content Include="Scripts\app\account.controller.js" />
-    <Content Include="Scripts\app\add-beneficiaries.controller.js" />
-    <Content Include="Scripts\app\add-billing-account.controller.js" />
-    <Content Include="Scripts\app\airtime-topup.controller.js" />
     <Content Include="Scripts\app\app.module.js" />
-    <Content Include="Scripts\app\billpayment.controller.js" />
     <Content Include="Scripts\app\bootstrap-select.js" />
-    <Content Include="Scripts\app\cardrequest.controller.js" />
-    <Content Include="Scripts\app\changepassword.controller.js" />
-    <Content Include="Scripts\app\changepin.controller.js" />
-    <Content Include="Scripts\app\chequebookrequest.list.controller.js" />
+    <Content Include="Scripts\app\loanapplication.controller.js" />
     <Content Include="Scripts\app\custom.currency.filter.js" />
-    <Content Include="Scripts\app\dashboard.controller.js" />
-    <Content Include="Scripts\app\ebiller.controller.js" />
-    <Content Include="Scripts\app\generate-zvouchertoken.controller.js" />
-    <Content Include="Scripts\app\inter-transfer.controller.js" />
-    <Content Include="Scripts\app\interbank-transfer.controller.js" />
-    <Content Include="Scripts\app\intra-transfer.controller.js" />
-    <Content Include="Scripts\app\investment-transfer.controller.js" />
-    <Content Include="Scripts\app\list-beneficiaries.controller.js" />
-    <Content Include="Scripts\app\list-billing-accounts.controller.js" />
-    <Content Include="Scripts\app\listrequest.controller.js" />
     <Content Include="Scripts\app\main.controller.js" />
-    <Content Include="Scripts\app\newrequest.controller.js" />
-    <Content Include="Scripts\app\scheduled-transfers.controller.js" />
     <Content Include="Scripts\app\services.factory.js" />
-    <Content Include="Scripts\app\session-data.factory.js" />
     <Content Include="Scripts\app\title.case.filter.js" />
-    <Content Include="Scripts\app\transfer-history-bydate.controller.js" />
-    <Content Include="Scripts\app\transfer-history.controller.js" />
-    <Content Include="Scripts\app\visa-card-transfer.controller.js" />
-    <Content Include="Scripts\app\wallet-transfer.controller.js" />
-    <Content Include="Scripts\app\zvoucher.controller.js" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
     <Content Include="Scripts\jQuery-2.1.4.min.js" />
@@ -1869,7 +1843,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
