--- a/ProjectUbuild/ProjectUbuild.csproj
+++ b/ProjectUbuild/ProjectUbuild.csproj
@@ -1789,7 +1789,7 @@
     <Content Include="Scripts\app\bootstrap-select.js" />
     <Content Include="Scripts\app\loanapplication.controller.js" />
     <Content Include="Scripts\app\custom.currency.filter.js" />
-    <Content Include="Scripts\app\main.controller.js" />
+    <Content Include="Scripts\app\utilities.factory.js" />
     <Content Include="Scripts\app\services.factory.js" />
     <Content Include="Scripts\app\title.case.filter.js" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
