--- a/uBuildCore/uBuildCore.csproj
+++ b/uBuildCore/uBuildCore.csproj
@@ -70,6 +70,8 @@
     <Compile Include="Logger.cs" />
     <Compile Include="Models\ClientAuths.cs" />
     <Compile Include="Models\ClientInfos.cs" />
+    <Compile Include="EligibilityCheckHandler.cs" />
+    <Compile Include="Models\EligibilityChecks.cs" />
     <Compile Include="Models\FittingsFixtures.cs" />
     <Compile Include="Models\HouseImage.cs" />
     <Compile Include="Models\LoanAppls.cs" />
