--- a/uBuildCore/uBuildCore.csproj
+++ b/uBuildCore/uBuildCore.csproj
@@ -67,10 +67,11 @@
   <ItemGroup>
     <Compile Include="Dbhandler.cs" />
     <Compile Include="ExtensionMethods.cs" />
+    <Compile Include="LoanApplicationHandler.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Models\ClientAuths.cs" />
     <Compile Include="Models\ClientInfos.cs" />
-    <Compile Include="EligibilityCheckHandler.cs" />
+    <Compile Include="CheckEligibilityRequest.cs" />
     <Compile Include="Models\EligibilityChecks.cs" />
     <Compile Include="Models\FittingsFixtures.cs" />
     <Compile Include="Models\HouseImage.cs" />
@@ -78,6 +79,7 @@
     <Compile Include="Models\LoanProcStages.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RestHandler.cs" />
+    <Compile Include="ServiceResponse.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
