--- a/uBuildCore/uBuildCore.csproj
+++ b/uBuildCore/uBuildCore.csproj
@@ -84,11 +84,13 @@
     <Compile Include="Models\HouseDesigns.cs" />
     <Compile Include="Models\LoanAppls.cs" />
     <Compile Include="Models\LoanApplTypes.cs" />
+    <Compile Include="Models\LoanInterestRates.cs" />
     <Compile Include="Models\LoanProcStages.cs" />
     <Compile Include="Models\RepaymentMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RestHandler.cs" />
     <Compile Include="ServiceResponse.cs" />
+    <Compile Include="SoftTokenService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
