--- a/ProjectUbuild/ProjectUbuild.csproj
+++ b/ProjectUbuild/ProjectUbuild.csproj
@@ -2340,6 +2340,9 @@
     <Content Include="Views\Account\Register_bck.cshtml" />
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Home\MyApplications.cshtml" />
+    <Content Include="Views\Home\FaQs.cshtml" />
+    <Content Include="Views\Home\Guidelines.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
