--- a/ProjectUbuild/Web.config
+++ b/ProjectUbuild/Web.config
@@ -8,7 +8,7 @@
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 	</configSections>
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=uBuild; Integrated Security=True" providerName="System.Data.SqlClient"/>
+		<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=uBuild;User Id=sa; Password=pass" providerName="System.Data.SqlClient"/>
 		<!--     <add name="DefaultConnection" connectionString="Data Source=172.29.18.95;Initial Catalog=uBuild; User Id=ubuild_user; Password=ubuild_pass" providerName="System.Data.SqlClient" /> -->
 	</connectionStrings>
 	<appSettings>
