--- a/ProjectUbuild/ProjectUbuild.csproj
+++ b/ProjectUbuild/ProjectUbuild.csproj
@@ -198,6 +198,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\HouseDesignsModel.cs" />
     <Compile Include="Models\IdentityExtensions.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\LoanApplicationModels.cs" />
@@ -1778,65 +1779,6 @@
     <Content Include="assets\plugins\moment\moment.min.js" />
     <Content Include="assets\plugins\noui-slider\jquery.nouislider.css" />
     <Content Include="assets\plugins\noui-slider\jquery.nouislider.min.js" />
-    <Content Include="assets\plugins\nvd3\lib\cie.js" />
-    <Content Include="assets\plugins\nvd3\lib\colorbrewer.js" />
-    <Content Include="assets\plugins\nvd3\lib\crossfilter.js" />
-    <Content Include="assets\plugins\nvd3\lib\crossfilter.min.js" />
-    <Content Include="assets\plugins\nvd3\lib\d3.v2.js" />
-    <Content Include="assets\plugins\nvd3\lib\d3.v2.min.js" />
-    <Content Include="assets\plugins\nvd3\lib\d3.v3.js" />
-    <Content Include="assets\plugins\nvd3\lib\fisheye.js" />
-    <Content Include="assets\plugins\nvd3\lib\hive.js" />
-    <Content Include="assets\plugins\nvd3\lib\horizon.js" />
-    <Content Include="assets\plugins\nvd3\lib\sankey.js" />
-    <Content Include="assets\plugins\nvd3\nv.d3.min.css" />
-    <Content Include="assets\plugins\nvd3\nv.d3.min.js" />
-    <Content Include="assets\plugins\nvd3\src\core.js" />
-    <Content Include="assets\plugins\nvd3\src\interactiveLayer.js" />
-    <Content Include="assets\plugins\nvd3\src\intro.js" />
-    <Content Include="assets\plugins\nvd3\src\models\axis.js" />
-    <Content Include="assets\plugins\nvd3\src\models\backup\bullet.js" />
-    <Content Include="assets\plugins\nvd3\src\models\backup\bulletChart.js" />
-    <Content Include="assets\plugins\nvd3\src\models\boilerplate.js" />
-    <Content Include="assets\plugins\nvd3\src\models\bullet.js" />
-    <Content Include="assets\plugins\nvd3\src\models\bulletChart.js" />
-    <Content Include="assets\plugins\nvd3\src\models\cumulativeLineChart.js" />
-    <Content Include="assets\plugins\nvd3\src\models\discreteBar.js" />
-    <Content Include="assets\plugins\nvd3\src\models\discreteBarChart.js" />
-    <Content Include="assets\plugins\nvd3\src\models\distribution.js" />
-    <Content Include="assets\plugins\nvd3\src\models\historicalBar.js" />
-    <Content Include="assets\plugins\nvd3\src\models\historicalBarChart.js" />
-    <Content Include="assets\plugins\nvd3\src\models\indentedTree.js" />
-    <Content Include="assets\plugins\nvd3\src\models\legend.js" />
-    <Content Include="assets\plugins\nvd3\src\models\line.js" />
-    <Content Include="assets\plugins\nvd3\src\models\lineChart.js" />
-    <Content Include="assets\plugins\nvd3\src\models\linePlusBarChart.js" />
-    <Content Include="assets\plugins\nvd3\src\models\linePlusBarWithFocusChart.js" />
-    <Content Include="assets\plugins\nvd3\src\models\lineWithFisheye.js" />
-    <Content Include="assets\plugins\nvd3\src\models\lineWithFisheyeChart.js" />
-    <Content Include="assets\plugins\nvd3\src\models\lineWithFocusChart.js" />
-    <Content Include="assets\plugins\nvd3\src\models\multiBar.js" />
-    <Content Include="assets\plugins\nvd3\src\models\multiBarChart.js" />
-    <Content Include="assets\plugins\nvd3\src\models\multiBarHorizontal.js" />
-    <Content Include="assets\plugins\nvd3\src\models\multiBarHorizontalChart.js" />
-    <Content Include="assets\plugins\nvd3\src\models\multiBarTimeSeries.js" />
-    <Content Include="assets\plugins\nvd3\src\models\multiBarTimeSeriesChart.js" />
-    <Content Include="assets\plugins\nvd3\src\models\multiChart.js" />
-    <Content Include="assets\plugins\nvd3\src\models\ohlcBar.js" />
-    <Content Include="assets\plugins\nvd3\src\models\parallelCoordinates.js" />
-    <Content Include="assets\plugins\nvd3\src\models\pie.js" />
-    <Content Include="assets\plugins\nvd3\src\models\pieChart.js" />
-    <Content Include="assets\plugins\nvd3\src\models\scatter.js" />
-    <Content Include="assets\plugins\nvd3\src\models\scatterChart.js" />
-    <Content Include="assets\plugins\nvd3\src\models\scatterPlusLineChart.js" />
-    <Content Include="assets\plugins\nvd3\src\models\sparkline.js" />
-    <Content Include="assets\plugins\nvd3\src\models\sparklinePlus.js" />
-    <Content Include="assets\plugins\nvd3\src\models\stackedArea.js" />
-    <Content Include="assets\plugins\nvd3\src\models\stackedAreaChart.js" />
-    <Content Include="assets\plugins\nvd3\src\nv.d3.css" />
-    <Content Include="assets\plugins\nvd3\src\outro.js" />
-    <Content Include="assets\plugins\nvd3\src\tooltip.js" />
-    <Content Include="assets\plugins\nvd3\src\utils.js" />
     <Content Include="assets\plugins\owl-carousel\assets\owl.carousel.css" />
     <Content Include="assets\plugins\owl-carousel\owl.carousel.js" />
     <Content Include="assets\plugins\owl-carousel\owl.carousel.min.js" />
@@ -2298,6 +2240,7 @@
     <Content Include="assets\foundry\video\video.webm" />
     <Content Include="assets\foundry\video\video2.ogg" />
     <Content Include="assets\foundry\video\video2.webm" />
+    <None Include="Properties\PublishProfiles\ubuild.pubxml" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\app\update-profile.conftroller.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
