--- a/ProjectUbuild/Web.config
+++ b/ProjectUbuild/Web.config
@@ -8,9 +8,9 @@
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 	</configSections>
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=uBuild;Integrated Security=True" providerName="System.Data.SqlClient"/>
+<!--		<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=uBuild;Integrated Security=True" providerName="System.Data.SqlClient"/>-->
 		<!--	  <add name="DefaultConnection" connectionString="Data Source=172.29.18.95;Initial Catalog=uBuild; User Id=ubuild_user; Password=ubuild_pass" providerName="System.Data.SqlClient" /> -->
-		<!--<add name="DefaultConnection" connectionString="Data Source=198.38.83.200;Initial Catalog=sordii_ubdb; User Id=sordii_ub; Password=ubP@$$505@18" providerName="System.Data.SqlClient" />-->
+		<add name="DefaultConnection" connectionString="Data Source=198.38.83.200;Initial Catalog=sordii_ubdb; User Id=sordii_ub; Password=ubP@$$505@18" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0"/>
@@ -20,7 +20,6 @@
 	</appSettings>
 	<!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
-
     The following attributes can be set on the <httpRuntime> tag.
       <system.Web>
         <httpRuntime targetFramework="4.5.2" />
