telephone number internationalization on register page

--- a/ProjectUbuild/ProjectUbuild.csproj
+++ b/ProjectUbuild/ProjectUbuild.csproj
@@ -2245,11 +2245,62 @@
     <Content Include="Scripts\app\update-profile.conftroller.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
     <Content Include="Scripts\jQuery-2.1.4.min.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\css\intlInputPhone.css" />
+    <Content Include="Scripts\jquery-intl-tel-input\css\intlInputPhone.min.css" />
+    <Content Include="Scripts\jquery-intl-tel-input\js\intlInputPhone.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\js\intlInputPhone.min.js" />
     <Content Include="Scripts\jquery.fileupload.js" />
     <Content Include="Scripts\jquery.idle.min.js" />
     <Content Include="Scripts\jquery.inputmask.bundle.js" />
     <Content Include="Scripts\jquery.inputmask.bundle.min.js" />
     <Content Include="Scripts\jquery.ui.widget.js" />
+    <Content Include="Scripts\ng-intl-tel-input\dist\ng-intl-tel-input.js" />
+    <Content Include="Scripts\ng-intl-tel-input\dist\ng-intl-tel-input.min.js" />
+    <Content Include="Scripts\ng-intl-tel-input\index.html" />
+    <Content Include="Scripts\ng-intl-tel-input\karma.conf.js" />
+    <Content Include="Scripts\ng-intl-tel-input\ng-intl-tel-input.directive.js" />
+    <Content Include="Scripts\ng-intl-tel-input\ng-intl-tel-input.directive.spec.js" />
+    <Content Include="Scripts\ng-intl-tel-input\ng-intl-tel-input.e2e.js" />
+    <Content Include="Scripts\ng-intl-tel-input\ng-intl-tel-input.module.js" />
+    <Content Include="Scripts\ng-intl-tel-input\ng-intl-tel-input.provider.js" />
+    <Content Include="Scripts\ng-intl-tel-input\ng-intl-tel-input.provider.spec.js" />
+    <Content Include="Scripts\ng-intl-tel-input\protractor.conf.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\helpers\helpers.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\core\closecountrydropdownEvent.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\core\countrychangeEvent.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\core\dropdownShortcuts.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\core\initialValues.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\core\multipleInstances.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\core\usingDropdown.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\core\usingInput.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\methods\destroy.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\methods\getExtension.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\methods\getNumber.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\methods\getNumberType.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\methods\getSelectedCountryData.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\methods\getValidationError.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\methods\isValidNumber.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\methods\setCountry.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\methods\setNumber.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\methods\setPlaceholderNumberType.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\options\allowDropdown.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\options\autoHideDialCode.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\options\autoPlaceholder.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\options\customPlaceholder.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\options\dropdownContainer.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\options\excludeCountries.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\options\formatOnDisplay.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\options\geoIpLookup.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\options\initialCountry.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\options\nationalMode.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\options\onlyCountries.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\options\placeholderNumberType.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\options\preferredCountries.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\options\separateDialCode.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\options\utilsScript.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\static\defaults.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\static\getCountryData.js" />
+    <Content Include="Scripts\jquery-intl-tel-input\spec\tests\static\loadUtils.js" />
     <Content Include="Scripts\toastr.min.js" />
     <Content Include="Views\Loan\Apply.cshtml" />
     <Content Include="Views\tes.html" />
@@ -2294,6 +2345,16 @@
     <Content Include="Views\Home\Guidelines.cshtml" />
     <Content Include="Views\FullHouse\Index.cshtml" />
     <Content Include="Views\FullHouse\HouseDesign.cshtml" />
+    <Content Include="Scripts\ng-intl-tel-input\.editorconfig" />
+    <Content Include="Scripts\ng-intl-tel-input\.jshintignore" />
+    <Content Include="Scripts\ng-intl-tel-input\.mversionrc" />
+    <Content Include="Scripts\ng-intl-tel-input\.npmignore" />
+    <Content Include="Scripts\ng-intl-tel-input\.travis.yml" />
+    <Content Include="Scripts\ng-intl-tel-input\bower.json" />
+    <Content Include="Scripts\ng-intl-tel-input\CONTRIBUTING.md" />
+    <Content Include="Scripts\ng-intl-tel-input\LICENSE" />
+    <Content Include="Scripts\ng-intl-tel-input\package.json" />
+    <Content Include="Scripts\ng-intl-tel-input\README.md" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
