--- a/uBuildCore/uBuildCore.csproj
+++ b/uBuildCore/uBuildCore.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Models\LoanInterestRates.cs" />
     <Compile Include="Models\LoanProcessStages.cs" />
     <Compile Include="Models\LoanProcStages.cs" />
+    <Compile Include="Models\LoanProcStageStates.cs" />
     <Compile Include="Models\RepaymentMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RestHandler.cs" />
