--- a/ProjectUbuild/Web.config
+++ b/ProjectUbuild/Web.config
@@ -6,7 +6,10 @@
 <configuration>
 	<configSections>
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-	</configSections>
+	 <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+   <section name="ProjectUbuild.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </sectionGroup>
+ </configSections>
 	<connectionStrings>
 <!--		<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=uBuild;Integrated Security=True" providerName="System.Data.SqlClient"/>-->
 		<!--	  <add name="DefaultConnection" connectionString="Data Source=172.29.18.95;Initial Catalog=uBuild; User Id=ubuild_user; Password=ubuild_pass" providerName="System.Data.SqlClient" /> -->
@@ -73,4 +76,11 @@
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
+ <applicationSettings>
+  <ProjectUbuild.Properties.Settings>
+   <setting name="DocUploadUrl" serializeAs="String">
+    <value />
+   </setting>
+  </ProjectUbuild.Properties.Settings>
+ </applicationSettings>
 </configuration>
