--- a/ProjectUbuild/Properties/Settings.settings
+++ b/ProjectUbuild/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="DocUploadUrl" Type="System.String" Scope="Application">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">upload url here</Value>
     </Setting>
   </Settings>
 </SettingsFile>
