--- a/ProjectUbuild/packages.config
+++ b/ProjectUbuild/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="bootstrap.less" version="3.3.5" targetFramework="net452" />
+  <package id="Bootstrap.v3.Datetimepicker" version="4.17.45" targetFramework="net452" />
   <package id="Brudex.CodeFirst" version="1.0.0" targetFramework="net45" />
   <package id="Dapper" version="1.12" targetFramework="net45" />
   <package id="DapperExtensions" version="1.4.4" targetFramework="net45" />
@@ -31,6 +33,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="Moment.js" version="2.9.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
