--- a/ProjectUbuild/Web.config
+++ b/ProjectUbuild/Web.config
@@ -5,13 +5,33 @@
   -->
 <configuration>
 	<configSections>
-		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 	</configSections>
 	<connectionStrings>
 <!--		<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=uBuild;Integrated Security=True" providerName="System.Data.SqlClient"/>-->
 		<!--	  <add name="DefaultConnection" connectionString="Data Source=172.29.18.95;Initial Catalog=uBuild; User Id=ubuild_user; Password=ubuild_pass" providerName="System.Data.SqlClient" /> -->
 		<add name="DefaultConnection" connectionString="Data Source=198.38.83.200;Initial Catalog=sordii_ubdb; User Id=sordii_ub; Password=ubP@$$505@18" providerName="System.Data.SqlClient" />
 	</connectionStrings>
+  <log4net>
+    <root>
+      <level value="ALL" />
+      <appender-ref ref="RollingLogFileAppender" />
+    </root>
+    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+      <file value="logs\" />
+      <datePattern value="'log-'yyyy-MM-dd'.log'" />
+      <staticLogFileName value="false" />
+      <appendToFile value="true" />
+      <rollingStyle value="Composite" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="100MB" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+      </layout>
+    </appender>
+  </log4net>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0"/>
 		<add key="webpages:Enabled" value="false"/>
