--- a/ProjectUbuild/Web.config
+++ b/ProjectUbuild/Web.config
@@ -99,7 +99,7 @@
  <applicationSettings>
   <ProjectUbuild.Properties.Settings>
    <setting name="DocUploadUrl" serializeAs="String">
-    <value>upload url here</value>
+    <value>/ClientDocs</value>
    </setting>
   </ProjectUbuild.Properties.Settings>
  </applicationSettings>
