--- a/ProjectUbuild/ProjectUbuild.csproj
+++ b/ProjectUbuild/ProjectUbuild.csproj
@@ -217,6 +217,14 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="assets\css\animate.css" />
+    <Content Include="assets\css\flexslider.css" />
+    <Content Include="assets\css\jquery-ui-demo-ie8.css" />
+    <Content Include="assets\css\jquery-ui-demo.css" />
+    <Content Include="assets\css\jquery.fileupload-noscript.css" />
+    <Content Include="assets\css\jquery.fileupload-ui-noscript.css" />
+    <Content Include="assets\css\jquery.fileupload-ui.css" />
+    <Content Include="assets\css\jquery.fileupload.css" />
     <Content Include="assets\css\style.css" />
     <Content Include="assets\css\style.min.css" />
     <Content Include="assets\foundry\css\bootstrap.css" />
@@ -2014,6 +2022,7 @@
     <Content Include="pages\img\progress\progress-circle-primary.svg" />
     <Content Include="pages\img\progress\progress-circle-success.svg" />
     <Content Include="pages\img\progress\progress-circle-warning.svg" />
+    <Content Include="Scripts\angular-messages.js" />
     <Content Include="Scripts\app\HouseDesign.js" />
     <Content Include="pages\js\pages.calendar.js" />
     <Content Include="pages\js\pages.calendar.min.js" />
